--- a/package.json
+++ b/package.json
@@ -10,14 +10,21 @@
     "start": "node src/index.js",
     "dev": "node src/index.js"
   },
-  "keywords": ["photo", "organizer", "exif", "cli", "rename"],
+  "keywords": [
+    "photo",
+    "organizer",
+    "exif",
+    "cli",
+    "rename"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
     "chalk": "^4.1.2",
-    "ora": "^5.4.1",
-    "commander": "^9.4.1",
+    "commander": "^14.0.0",
     "exifr": "^7.1.3",
-    "fs-extra": "^11.1.1"
+    "fs-extra": "^11.1.1",
+    "ora": "^5.4.1",
+    "yauzl": "^2.10.0"
   }
 }
