--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "chalk": "^4.1.2",
     "commander": "^14.0.0",
+    "crypto-js": "^4.2.0",
     "exifr": "^7.1.3",
     "fs-extra": "^11.1.1",
     "ora": "^5.4.1",
