--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "fs-extra": "^11.1.1",
     "ora": "^5.4.1",
     "yauzl": "^2.10.0"
+  },
+  "devDependencies": {
+    "checkly": "latest",
+    "jiti": "^2"
   }
 }
